# eagleshot

./: README.md  eagleshot.c  meson.build  wscr.c
src/: main.c  screenshot.c  screenshot.h  utils.c  utils.h
